About Page View

--- a/index.html
+++ b/index.html
@@ -1,15 +1,16 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title>Page Title</title>
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
 
-<h1>This is a Heading</h1>
-<p>This is a paragraph.</p>
+<svg xmlns="http://www.w3.org/2000/svg" width="1919.5" height="142.72" viewBox="0 0 1919.5 142.72">
+  <path id="Path_1" data-name="Path 1" d="M55,517.891H815.429L869.4,376.171h189.318l43.688,59.268h872.1" transform="translate(-55 -375.671)" fill="none" stroke="#707070" stroke-width="1"/>
+</svg>
 
+<div class="about">
+<p>ABOUT</p>
+</div>
 </body>
 </html>
-
-
-ś
